--- a/CUCEI/src/main/resources/application.properties
+++ b/CUCEI/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=CUCEI
-
-spring.datasource.url=jdbc:mysql://127.0.0.1/springcucei
+spring.datasource.url=jdbc:mysql://localhost:3306/springcucei?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mydatabase.cpgwwu02059q.us-east-2.rds.amazonaws.com:3306/springbootdb
 spring.datasource.username=root
 spring.datasource.password=
+#spring.datasource.password=administrador333
 spring.jpa.hibernate.ddl-auto=update
